[Fixes #9832125] Wrap feed name before it hits the subscribe button

--- a/app/stylesheets/feeds/_subscribe.sass
+++ b/app/stylesheets/feeds/_subscribe.sass
@@ -20,6 +20,8 @@
       bottom-color: #425d7d
 
 .feed.item
+  position: relative
   .new_subscription
-    float: right
-    margin-top: -10px
+    position: absolute
+    right: 15px
+    top: 20px
